--- a/src/vscp/uvscpd/Makefile.in
+++ b/src/vscp/uvscpd/Makefile.in
@@ -4,6 +4,7 @@
 
 # STATIC = yes if a static build is requested.
 STATIC=@STATIC@
+VSCP_PROJ_BASE_DIR=@VSCPDIR@
 
 prefix = @prefix@
 exec_prefix = @exec_prefix@
@@ -29,6 +30,12 @@ WXGTK_CXXFLAGS = @WXGTK_CXXFLAGS@
 WXGTK_CFLAGS = @WXGTK_CFLAGS@
 WXGTK_LIBS = @WXGTK_LIBS@
 WXGTK_STATIC_LIBS = @WXGTK_STATIC_LIBS@
+
+# get version from the version file
+MAJOR_VERSION = `sed '35!d' ../../common/version.h  | cut -b 33-`
+MINOR_VERSION = `sed '36!d' ../../common/version.h  | cut -b 33-`
+RELEASE_VERSION = `sed '37!d' ../../common/version.h  | cut -b 33-`
+BUILD_VERSION = `sed '38!d' ../../common/version.h  | cut -b 33-
 
 MONGOOSE_CFLAGS = -DMG_ENABLE_THREADS -DMG_ENABLE_IPV6 -DMG_ENABLE_SSL -DMG_ENABLE_HTTP_CGI -DMG_ENABLE_HTTP_SSI -DMG_ENABLE_HTTP_SSI_EXEC -DMG_ENABLE_HTTP_WEBDAV -DMG_ENABLE_GETADDRINFO -DMG_ENABLE_HTTP_URL_REWRITES
 CFLAGS = -std=c99 @CFLAGS@ -D_POSIX_SOURCE -D_SVID_SOURCE @WXBASE_CFLAGS@ -DCBC -I../common -I../../common -I../../common/lua -I../../common/lua/src
@@ -63,25 +70,61 @@ DESTDIR =
 WX_RELEASE = 3.0
 LIBDIRNAME = $(top_wxbuilddir)lib
 
-UVSCPD_OBJECTS =  uvscpd.o\
-	websocket.o\
-	base64_enc.o\
+UVSCPD_OBJECTS =  uvscpd.o \
+	websocket.o \
+	base64_enc.o \
 	sha1.c \
-	../../common/dllist.o \
-	../../common/crc.o \
-	../../common/crc8.o \
-	../../common/aes.o\
-
-ALWAYS_BUILD = ../../common/dllist.o \
-	../../common/crc.o \
-	../../common/crc8.o \
-	../../common/aes.o \
-	../../common/randpassword.o\
+	dllist.o \
+	crc.o \
+	crc8.o \
+	vscp_aes.o\
 
 ### Targets: ###
 
 all: uvscpd
 
+uvscpd: $(UVSCPD_OBJECTS)
+	$(CXX) -o $@ $(UVSCPD_OBJECTS) $(LDFLAGS) -L$(LIBDIRNAME) $(WXLIBS) $(EXTRALIBS)
+
+uvscpd.o: uvscpd.c uvscpd.h
+	$(CC) $(CFLAGS) -c uvscpd.c -o $@
+	
+vscphelperlib.o: ../vscphelperlib.cpp ../vscphelperlib.h
+	$(CXX) $(CXXFLAGS) $(CPPFLAGS) -c ../vscphelperlib.cpp -o $@
+
+vscpremotetcpif.o: ../common/vscpremotetcpif.cpp ../common/vscpremotetcpif.h
+	$(CXX) $(CXXFLAGS) $(CPPFLAGS) -c ../common/vscpremotetcpif.cpp -o $@
+
+vscphelper.o: ../common/vscphelper.cpp ../common/vscphelper.h
+	$(CXX) $(CXXFLAGS) $(CPPFLAGS) -c ../common/vscphelper.cpp -o $@
+
+guid.o: ../common/guid.cpp ../common/guid.h
+	$(CXX) $(CXXFLAGS) $(CPPFLAGS) -c ../common/guid.cpp -o $@	
+	
+vscp_aes.o: ../../common/vscp_aes.c ../../common/vscp_aes.h
+	$(CC) $(CFLAGS) -c ../../common/vscp_aes.c -o $@
+
+crc.o: ../../common/crc.c ../../common/crc.h
+	$(CC) $(CFLAGS) -c ../../common/crc.c -o $@
+	
+crc8.o: ../../common/crc8.c ../../common/crc8.h
+	$(CC) $(CFLAGS) -c ../../common/crc8.c -o $@		
+
+vscpbase64.o: ../../common/vscpbase64.c ../../common/vscpbase64.h
+	$(CC) $(CFLAGS) -c ../../common/vscpbase64.c -o $@
+	
+mongoose.o: ../../common/mongoose.c ../../common/mongoose.h
+	$(CC) $(CFLAGS) $(MONGOOSE_CFLAGS) -c ../../common/mongoose.c -o $@
+
+fastpbkdf2.o: ../../common/fastpbkdf2.c ../../common/fastpbkdf2.h
+	$(CC) $(CFLAGS) -c ../../common/fastpbkdf2.c -o $@
+
+vscpmd5.o: ../../common/vscpmd5.c ../../common/vscpmd5.h
+	$(CC) $(CFLAGS) -c ../../common/vscpmd5.c -o $@	
+
+dllist.o: ../../common/dllist.c ../../common/dllist.h
+	$(CC) $(CFLAGS) -c ../../common/dllist.c -o $@	
+	
 install: all
 	$(INSTALL_PROGRAM) uvscpd $(bindir)
 
@@ -98,9 +141,6 @@ clean:
 
 distclean: clean
 	rm -f config.cache config.log config.status bk-deps bk-make-pch shared-ld-sh Makefile
-
-uvscpd: $(UVSCPD_OBJECTS)
-	$(CXX) -o $@ $(UVSCPD_OBJECTS) $(LDFLAGS) -L$(LIBDIRNAME) $(WXLIBS) $(EXTRALIBS)
 	
 $(ALWAYS_BUILD):  .FORCE
 
