--- a/src/vscp/drivers/level1/socketcan/linux/Makefile.in
+++ b/src/vscp/drivers/level1/socketcan/linux/Makefile.in
@@ -31,7 +31,13 @@ WXGTK_CFLAGS = @WXGTK_CFLAGS@
 WXGTK_LIBS = @WXGTK_LIBS@
 WXGTK_STATIC_LIBS = @WXGTK_STATIC_LIBS@
 
-CFLAGS = -std=c99 @CFLAGS@ @WXBASE_CFLAGS@ -DCBC -I../../../../common -I../../../../../common
+# get version from the version file
+MAJOR_VERSION = `sed '35!d' ../../common/version.h  | cut -b 33-`
+MINOR_VERSION = `sed '36!d' ../../common/version.h  | cut -b 33-`
+RELEASE_VERSION = `sed '37!d' ../../common/version.h  | cut -b 33-`
+BUILD_VERSION = `sed '38!d' ../../common/version.h  | cut -b 33-
+
+CFLAGS = -std=c99 @CFLAGS@ -fPIC @WXBASE_CFLAGS@ -DCBC -I../../../../common -I../../../../../common
 CXXFLAGS = -D__LINUX__ -fPIC -D_REENTRANT @CXXFLAGS@ @WXBASE_CXXFLAGS@
 CPPFLAGS = -D__LINUX__ -fPIC @CPPFLAGS@ @WXBASE_CPPFLAGS@ -fno-var-tracking-assignments -Iinclude -I../../../../common -I../../../../../common
 
@@ -65,19 +71,32 @@ LIBDIRNAME = $(top_wxbuilddir)lib
 
 CANALSOCKETCAN_OBJECTS = vscpl1_socketcandrv.o\
 	socketcanobj.o\
-	../../../../common/guid.o\
-	../../../../../common/dllist.o 
-
-PROJOBJS = ../../../../common/guid.o\
-	../../../../../common/dllist.o
-
-ALWAYS_BUILD = ../../../../common/guid.o\
-	../../../../../common/dllist.o
+	guid.o\
+	dllist.o 
 
 ### Targets: ###
 
 all: vscpl1_socketcandrv.so test
 
+
+test:  test.o $(PROJOBJS)
+	$(CXX) -o $@ test.o $(PROJOBJS) $(LDFLAGS) -L$(LIBDIRNAME) $(WXLIBS) $(EXTRALIBS)
+
+vscpl1_socketcandrv.so: $(CANALSOCKETCAN_OBJECTS)
+	$(CXX) -o $@ $(CANALSOCKETCAN_OBJECTS) $(DLFLAGS) -L$(LIBDIRNAME) $(WXLIBS) $(EXTRALIBS) 
+
+vscpl1_socketcandrv.o: vscpl1_socketcandrv.cpp vscpl1_socketcandrv.h
+	$(CXX) $(CXXFLAGS) $(CPPFLAGS) -c vscpl1_socketcandrv.cpp -o $@
+
+socketcanobj.o: socketcanobj.cpp socketcanobj.h
+	$(CXX) $(CXXFLAGS) $(CPPFLAGS) -c socketcanobj.cpp -o $@
+	
+guid.o: ../../../../common/guid.cpp ../../../../common/guid.h
+	$(CXX) $(CXXFLAGS) $(CPPFLAGS) -c ../../../../common/guid.cpp -o $@		
+
+dllist.o: ../../../../../common/dllist.c ../../../../../common/dllist.h
+	$(CC) $(CFLAGS) -c ../../../../../common/dllist.c -o $@
+	
 install: all
 	mkdir -p $(VSCP_PROJ_BASE_DIR)/drivers/level1	
 	$(INSTALL_PROGRAM) vscpl1_socketcandrv.so $(VSCP_PROJ_BASE_DIR)/drivers/level1
@@ -99,13 +118,6 @@ clean:
 
 distclean: clean
 	rm -f config.cache config.log config.status bk-deps bk-make-pch shared-ld-sh Makefile
-
-test:  test.o $(PROJOBJS)
-	$(CXX) -o $@ test.o $(PROJOBJS) $(LDFLAGS) -L$(LIBDIRNAME) $(WXLIBS) $(EXTRALIBS)
-
-# Build the Linux DL
-%.so: %.o $(CANALSOCKETCAN_OBJECTS)
-	$(CXX) -o $@ $(CANALSOCKETCAN_OBJECTS) $(DLFLAGS) -L$(LIBDIRNAME) $(WXLIBS) $(EXTRALIBS) 
 
 $(ALWAYS_BUILD):  .FORCE
 
