New acl format that allow for positive and negative remote hosts

--- a/.gitignore
+++ b/.gitignore
@@ -277,3 +277,4 @@ tests/udp/send_vscp_udp_frame
 src/vscp/helperlib/linux/libvscphelper-dev_12.29.0-1_amd64.deb
 src/vscp/helperlib/linux/libvscphelper.so.12.29.0
 
+/.metadata/
