--- a/Makefile.in
+++ b/Makefile.in
@@ -38,34 +38,29 @@ install:
 	mkdir -p @VSCPDIR@/web/testws
 	mkdir -p @VSCPDIR@/vscp
 	mkdir -p @VSCPDIR@/tables
-	# Install sub components
+	mkdir -p @VSCPDIR@/tables
+# Install sub components
 	@for d in $(PROJ_SUBDIRS); do (echo "====================================================" &&\
 	echo "Building in dir " $$d && echo "====================================================" && cd $$d && $(MAKE) install); done
-	# startup script
+# startup script
 	$(INSTALL_PROGRAM) -b -m755 vscpd.startup_script_debian /etc/init.d/vscpd
 	update-rc.d vscpd defaults
-	# main configuration file
-	mkdir -p /etc/vscp
-	$(INSTALL_PROGRAM) -b -m744 config_examples/vscpd.conf_unix_distro /etc/vscp/vscpd.conf
-	# example data files
-	$(INSTALL_PROGRAM) -b -m744 config_examples/variables.xml_distro @VSCPDIR@/variables.xml
-	$(INSTALL_PROGRAM) -b -m744 config_examples/dm.xml_distro @VSCPDIR@/dm.xml
-	$(INSTALL_PROGRAM) -b -m744 config_examples/simulation/simtempdata.txt @VSCPDIR@/simtempdata.txt
-	$(INSTALL_PROGRAM) -b -m744 config_examples/certs/server.pem @VSCPDIR@/certs
-	$(INSTALL_PROGRAM) -b -m744 config_examples/certs/client.pem @VSCPDIR@/certs
 	@echo
 	@echo
 	@echo "Your VSCP & Friends system is now installed."
 	@echo "============================================"
+	@echo 
+	@echo "Now please use 'make install-config' to install default configuration files "
+	@echo "if this is the first install of VSCP & Friends on this system."
 	@echo
 	@echo " - Start the VSCP daemon with 'sudo /etc/init.d/vscpd start'"
 	@echo "   or 'vscpd -s' to start the daemon in the  foreground."
 	@echo
-	@echo " - Admin interface is at http://localhost:8080/vscp"
+	@echo " - Admin interface is at http://localhost:8884/vscp"
 	@echo "   Username: admin, Password: secret"
 	@echo
 	@echo " - If you have installed the sample content it is located at"
-	@echo "   http://localhost:8080. Remember to change the ip address"
+	@echo "   http://localhost:8884. Remember to change the ip address"
 	@echo "   in the file @VSCPDIR@/web/testws/settings.js to your local"
 	@echo "   ip address ($(IPADDRESS)) to be able to access this content from other "
 	@echo "   machines than your local machine."
@@ -84,13 +79,16 @@ install:
 	@echo "   Have fun and remember to always be hungry and stay foolish or the other way"
 	@echo "   around be foolish - stay hungry! - There is always a choice."
 
-web-files:
-	mkdir -p @VSCPDIR@/web
-	mkdir -p @VSCPDIR@/web/css
-	mkdir -p @VSCPDIR@/web/images
-	mkdir -p @VSCPDIR@/web/lib
-	mkdir -p @VSCPDIR@/web/testws
-	cp -rf config_examples/web/* @VSCPDIR@/web/
+install-config:
+	# main configuration file
+	mkdir -p /etc/vscp
+	$(INSTALL_PROGRAM) -b -m744 config_examples/vscpd.conf_unix_distro /etc/vscp/vscpd.conf
+	# example data files
+	$(INSTALL_PROGRAM) -b -m744 config_examples/variables.xml_distro @VSCPDIR@/variables.xml
+	$(INSTALL_PROGRAM) -b -m744 config_examples/dm.xml_distro @VSCPDIR@/dm.xml
+	$(INSTALL_PROGRAM) -b -m744 config_examples/simulation/simtempdata.txt @VSCPDIR@/simtempdata.txt
+	$(INSTALL_PROGRAM) -b -m744 config_examples/certs/server.pem @VSCPDIR@/certs
+	$(INSTALL_PROGRAM) -b -m744 config_examples/certs/client.pem @VSCPDIR@/certs
 
 delete-all:
 	rm -rf @VSCPDIR@/*
