--- a/Makefile.in
+++ b/Makefile.in
@@ -38,12 +38,12 @@ install:
 	mkdir -p @VSCPDIR@/web/testws
 	mkdir -p @VSCPDIR@/vscp
 	mkdir -p @VSCPDIR@/tables
-	mkdir -p @VSCPDIR@/tables
+	mkdir -p @VSCPDIR@/mdf
 # Install sub components
 	@for d in $(PROJ_SUBDIRS); do (echo "====================================================" &&\
 	echo "Building in dir " $$d && echo "====================================================" && cd $$d && $(MAKE) install); done
 # startup script
-	$(INSTALL_PROGRAM) -b -m755 vscpd.startup_script_debian /etc/init.d/vscpd
+	$(INSTALL_PROGRAM) -b -m755 config_examples/vscpd.startup_script_debian /etc/init.d/vscpd
 	update-rc.d vscpd defaults
 	@echo
 	@echo
