--- a/src/vscp/daemon/linux/Makefile.in
+++ b/src/vscp/daemon/linux/Makefile.in
@@ -304,8 +304,10 @@ install: all
 	mkdir -p @VSCPDIR@/web/testws
 	mkdir -p @VSCPDIR@/vscp
 	mkdir -p @VSCPDIR@/tables
+	mkdir -p @VSCPDIR@/mdf
+
 	# startup script
-	$(INSTALL_PROGRAM) -b -m755 ../../../../vscpd.startup_script_debian /etc/init.d/vscpd
+	$(INSTALL_PROGRAM) -b -m755 ../../../../config_examples/vscpd.startup_script_debian /etc/init.d/vscpd
 	update-rc.d vscpd defaults
 	# main configuration file
 	mkdir -p /etc/vscp
