--- a/src/vscp/helperlib/linux/Makefile.in
+++ b/src/vscp/helperlib/linux/Makefile.in
@@ -142,9 +142,9 @@ install: all
 	$(STRIP) libvscphelper.so
 	cp libvscphelper.so $(LIB_PLUS_VER)
 	$(INSTALL_PROGRAM) $(LIB_PLUS_VER) $(libdir)
-	ln -s $(libdir)/$(LIB_PLUS_VER) $(libdir)/libvscphelper.so
-	ln -s $(libdir)/$(LIB_PLUS_VER) $(libdir)/libvscphelper.so.$(MAJOR_VERSION)
-	ln -s $(libdir)/$(LIB_PLUS_VER) $(libdir)/libvscphelper.so.$(MAJOR_VERSION).$(MINOR_VERSION)
+	ln -fs $(libdir)/$(LIB_PLUS_VER) $(libdir)/libvscphelper.so
+	ln -fs $(libdir)/$(LIB_PLUS_VER) $(libdir)/libvscphelper.so.$(MAJOR_VERSION)
+	ln -fs $(libdir)/$(LIB_PLUS_VER) $(libdir)/libvscphelper.so.$(MAJOR_VERSION).$(MINOR_VERSION)
 	$(INSTALL_PROGRAM) ../vscphelperlib.h $(includedir)
 	ar rcs libvscphelper.a libvscphelper.o
 
