--- a/src/vscp/daemon/linux/Makefile.in
+++ b/src/vscp/daemon/linux/Makefile.in
@@ -282,8 +282,10 @@ vscpd: $(VSCPD_OBJECTS)
 	$(CXX) -o $@ $(VSCPD_OBJECTS) $(LDFLAGS) -L$(LIBDIRNAME) $(WXLIBS) $(EXTRALIBS)
 
 install: all
+	
 	$(STRIP) vscpd
 	$(INSTALL_PROGRAM) vscpd $(bindir)
+	
 	# create folder structure
 	mkdir -p @VSCPDIR@
 	mkdir -p @VSCPDIR@/logs
@@ -307,21 +309,58 @@ install: all
 	mkdir -p @VSCPDIR@/mdf
 
 	# startup script
-	$(INSTALL_PROGRAM) -b -m755 ../../../../config_examples/vscpd.startup_script_debian /etc/init.d/vscpd
-	update-rc.d vscpd defaults
+	if [ ! -f /etc/init.d/vscpd ]; then
+	    $(INSTALL_PROGRAM) -b -m755 ../../../../config_examples/vscpd.startup_script_debian /etc/init.d/vscpd
+	    update-rc.d vscpd defaults
+	fi
+
 	# main configuration file
 	mkdir -p /etc/vscp
-	$(INSTALL_PROGRAM) -b -m744 ../../../../config_examples/vscpd.conf_unix_distro /etc/vscp/vscpd.conf
-	# example data files
-	$(INSTALL_PROGRAM) -b -m744 ../../../../config_examples/variables.xml_distro @VSCPDIR@/variables.xml
-	$(INSTALL_PROGRAM) -b -m744 ../../../../config_examples/dm.xml_distro @VSCPDIR@/dm.xml
-	$(INSTALL_PROGRAM) -b -m744 ../../../../config_examples/simulation/simtempdata.txt @VSCPDIR@/simtempdata.txt
-	$(INSTALL_PROGRAM) -b -m744 ../../../../config_examples/certs/server.pem @VSCPDIR@/certs
-	$(INSTALL_PROGRAM) -b -m744 ../../../../config_examples/certs/client.pem @VSCPDIR@/certs
+	if [ ! -f /etc/vscp/vscpd.conf ]; then
+	    $(INSTALL_PROGRAM) -b -m744 ../../../../config_examples/vscpd.conf_unix_distro /etc/vscp/vscpd.conf
+	else
+	    $(INSTALL_PROGRAM) -b -m744 ../../../../config_examples/vscpd.conf_unix_distro /etc/vscp/vscpd.conf.`date +'%Y%m%d'`
+	fi
+
+	# Example variables
+	if [ ! -f @VSCPDIR@/variables.xml ]; then
+	    $(INSTALL_PROGRAM) -b -m744 ../../../../config_examples/variables.xml_distro @VSCPDIR@/variables.xml
+	else
+	    $(INSTALL_PROGRAM) -b -m744 ../../../../config_examples/variables.xml_distro @VSCPDIR@/variables.xml.`date +'%Y%m%d'`
+	fi
+	
+	# Example DM
+	if [ ! -f @VSCPDIR@/dm.xml ]; then
+	    $(INSTALL_PROGRAM) -b -m744 ../../../../config_examples/dm.xml_distro @VSCPDIR@/dm.xml
+	else
+	    $(INSTALL_PROGRAM) -b -m744 ../../../../config_examples/dm.xml_distro @VSCPDIR@/dm.xml.`date +'%Y%m%d'`
+	fi
+
+	# Sample data for simulation
+	if [ ! -f @VSCPDIR@/simtempdata.txt ]; then
+	    $(INSTALL_PROGRAM) -b -m744 ../../../../config_examples/simulation/simtempdata.txt @VSCPDIR@/simtempdata.txt
+	else
+	    $(INSTALL_PROGRAM) -b -m744 ../../../../config_examples/simulation/simtempdata.txt @VSCPDIR@/simtempdata.txt.`date +'%Y%m%d'`
+	fi
+
+	# Server sample certificat
+	if [ ! -f @VSCPDIR@/certs/server.pem ]; then
+	    $(INSTALL_PROGRAM) -b -m744 ../../../../config_examples/certs/server.pem @VSCPDIR@/certs
+	fi
+
+	# Client sample certificat
+	if [ ! -f @VSCPDIR@/certs/client.pem ]; then
+	    $(INSTALL_PROGRAM) -b -m744 ../../../../config_examples/certs/client.pem @VSCPDIR@/certs
+	fi
 
 uninstall:
 
 install-strip: install
+
+deb:    all
+	echo "\n" | ./builddist.sh
+	mkdir ../../../../dist
+	cp *.deb ../../../../dist
 
 clean:
 	rm -rf ./.deps ./.pch
@@ -330,6 +369,7 @@ clean:
 	rm -f ../../common/*.o
 	rm -f ../../../common/*.o
 	rm -f ../../../vscp/common/*.o
+	rm *.deb
 	rm -f vscpd
 
 distclean: clean
